[package]
name = "cordyceps_api"
version = "0.1.1"
edition = "2021"
authors = ["linuxtechtips"]
description = "OpenAI API Wrapper"
license = "MIT"
github = "https://github.com/linux-techtips/cordyceps"

keywords = ["openai", "api", "ai", "chatgpt"]

[features]
default = ["chat", "dep:futures-util", "dep:tokio", "reqwest/stream"]
blocking = ["reqwest/blocking"]
tests = []
chat = []

[dev-dependencies]
rusty-hook = { version = "0.11.2", optional = false }

[build-dependencies]
clippy = { version = "0.0.302", optional = true }
rustfmt = { version = "0.10.0", optional = true }

[dependencies]
bytes = "1.4.0"
serde_jsonrc = "0.1.0"
futures-util = { version = "0.3.26", default-features = true, optional = true }
tokio = { version = "1.25.0", features = ["full"], default-features = true, optional = true }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = {version="0.11.14", features=["json"], default-features = true, optional = false}
